--- a/index.html
+++ b/index.html
@@ -4,165 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Hunter Biersdorff</title>
-  <style>
-    /* General Reset and Body Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'serif', sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      line-height: 1.5;
-    }
-
-    h1, h2 {
-      color: #333;
-      font-weight: 750;
-    }
-
-    p {
-      color: #555;
-    }
-
-    /* Header Styles */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2rem 3rem;
-      background: #333;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      color: #fff;
-    }
-
-    nav {
-      display: flex;
-      gap: 1rem;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ddd;
-    }
-
-    /* Main Section Styles */
-    main {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: calc(100vh - 140px); /* Adjust for header/footer height */
-      padding: 2rem;
-      text-align: center;
-      color: #333;
-    }
-
-    .profile {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1.5rem;
-      margin-bottom: 3rem;
-    }
-
-    .profile img {
-      border-radius: 50%;
-      width: 220px;
-      max-width: 90%;
-      height: auto;
-      object-fit: cover;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .profile h1 {
-      font-size: 3rem;
-      margin-top: 1rem;
-    }
-
-    .profile p {
-      max-width: 700px;
-      font-size: 1.2rem;
-      line-height: 1.8;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-
-    /* Buttons */
-    .btn, .about-link {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      color: #fff;
-      background-color: #555;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn:hover, .about-link:hover {
-      background-color: #333;
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      font-size: 1rem;
-    }
-
-    footer a {
-      color: #ddd;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Mobile Responsive */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        padding: 1rem;
-      }
-
-      header h1 {
-        font-size: 2rem;
-      }
-
-      nav {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      .profile h1 {
-        font-size: 2.5rem;
-      }
-
-      .profile p {
-        font-size: 1rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css"> <!-- Linked external CSS -->
 </head>
 
 <body>
@@ -182,7 +24,7 @@
     <div class="profile">
       <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
       <h1>Hunter Biersdorff</h1>
-      <p>Welcome to my personal portfolio! I’m a data center technician with a Bachelor’s in Physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
+      <p>Welcome to my personal portfolio! I’m a data center technician with a Bachelor’s in physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
       <a href="resume.html" class="btn">View My Resume</a>
       <a href="about.html" class="about-link">Learn more about me</a>
     </div>
