--- a/contact.html
+++ b/contact.html
@@ -2,153 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Hunter Biersdorff</title>
-  <style>
-    /* General Reset and Body Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: #ffffff;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    /* Header and Navigation */
-    header {
-      background-color: #ffffff;
-      padding: 2rem 1rem;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: #1d1d1f;
-      margin-bottom: 1rem;
-    }
-
-    nav {
-      margin-top: 1rem;
-    }
-
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #1d1d1f;
-      font-weight: 500;
-      padding-bottom: 2px;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s ease;
-    }
-
-    nav a:hover {
-      border-color: #0071e3;
-    }
-
-    /* Main Section Styles */
-    main {
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 0 2rem;
-      text-align: center;
-    }
-
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #0071e3;
-    }
-
-    p {
-      color: #555;
-      font-size: 1.1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    /* Contact Form */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
-      max-width: 600px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background-color: #f9f9f9;
-      border-radius: 8px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    form input, form textarea {
-      padding: 1rem;
-      font-size: 1rem;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      outline: none;
-    }
-
-    form input:focus, form textarea:focus {
-      border-color: #0071e3;
-    }
-
-    form button {
-      padding: 1rem;
-      background-color: #0071e3;
-      color: white;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    form button:hover {
-      background-color: #005bb5;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      font-size: 1rem;
-      color: #888;
-      padding: 2rem 1rem;
-      background-color: #f9f9f9;
-    }
-
-    footer a {
-      color: #0071e3;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      header h1 {
-        font-size: 2rem;
-      }
-
-      nav a {
-        margin: 0 0.5rem;
-      }
-
-      main {
-        padding: 0 1rem;
-      }
-
-      form {
-        padding: 1.5rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -160,6 +16,7 @@
       <a href="resume.html">Resume</a>
     </nav>
   </header>
+
   <main>
     <h2>Send me a Message</h2>
     <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
@@ -175,6 +32,7 @@
       <button type="submit">Send Message</button>
     </form>
   </main>
+
   <footer>
     © 2025 Hunter Biersdorff
   </footer>
