--- a/projects.html
+++ b/projects.html
@@ -2,19 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Hunter Biersdorff</title>
-  <style>
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 0; background: #fff; color: #1d1d1f; }
-    header, footer { text-align: center; padding: 2rem 1rem; }
-    nav a { margin: 0 1rem; text-decoration: none; color: #1d1d1f; border-bottom: 2px solid transparent; padding-bottom: 2px; }
-    nav a:hover { border-color: #0071e3; }
-    main { max-width: 900px; margin: 3rem auto; padding: 0 1rem; }
-    .card { padding: 1.5rem; background: #f8f8f8; border-radius: 12px; margin-bottom: 2rem; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
-    h2 { font-size: 1.5rem; margin-bottom: 0.5rem; }
-    p { color: #555; }
-    a.button { display: inline-block; margin-top: 1rem; padding: 0.5rem 1.2rem; background: #0071e3; color: #fff; border-radius: 6px; text-decoration: none; font-weight: 500; }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -26,38 +16,45 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <div class="card">
       <h2>Exoplanets</h2>
-      <p>A model of exoplanets that aims to find the semi major axis and astronomical unit for planets. </p>
+      <p>A model of exoplanets that aims to find the semi major axis and astronomical unit for planets.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
     </div>
+
     <div class="card">
       <h2>Basic Graphing</h2>
-      <p>Simply learning to create graphical representations. This was the first step on my journey of displaying data.</p>
+      <p>Learning to create graphical representations — the first step on my journey to displaying data visually.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
-     <div class="card">
-      <h2>Legendre Polynomial with graph</h2>
-      <p>A Graphical representaiton of Legendre Polynomials. Legendre Polynomials are a system of complete and orthoganl polynomials that havbe a wide number of mathematical properties and applications.  </p>
+
+    <div class="card">
+      <h2>Legendre Polynomial with Graph</h2>
+      <p>A graphical representation of Legendre Polynomials — a system of complete and orthogonal polynomials with broad mathematical applications.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Legendre%20Polynomials" target="_blank">View on GitHub</a>
     </div>
-     <div class="card">
-      <h2>Roll of the DI</h2>
-      <p>Python code to simulate the rolling of dice</p>
+
+    <div class="card">
+      <h2>Roll of the Die</h2>
+      <p>Python code to simulate rolling dice.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Roll%20of%20the%20di" target="_blank">View on GitHub</a>
     </div>
-     <div class="card">
-      <h2>Place Holder</h2>
-      <p>Description</p>
+
+    <div class="card">
+      <h2>Placeholder</h2>
+      <p>Project description coming soon!</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
-     <div class="card">
-      <h2>SPlace Holder</h2>
-      <p>Description</p>
+
+    <div class="card">
+      <h2>Placeholder</h2>
+      <p>Project description coming soon!</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
     </div>
   </main>
+
   <footer>
     © 2025 Hunter Biersdorff
   </footer>
