--- a/resume.html
+++ b/resume.html
@@ -1,117 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume | Hunter Biersdorff</title>
-  <style>
-    /* General Reset and Body Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #f4f4f4; /* Light gray background */
-      color: #333;
-      line-height: 1.6;
-    }
-
-    /* Header Styles */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2rem 3rem;
-      background: #333; /* Dark gray background */
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      color: #fff; /* White text in header */
-    }
-
-    nav {
-      display: flex;
-      gap: 1rem;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #fff; /* White links */
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ddd; /* Light gray on hover */
-    }
-
-    /* Resume Section Styles */
-    .resume-container {
-      max-width: 1200px; /* Larger width for the resume viewer */
-      margin: 2rem auto;
-      background: #fff; /* White background for clean design */
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      padding: 2rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: calc(100vh - 100px); /* Occupy most of the viewport */
-      overflow: hidden;
-    }
-
-    .pdf-viewer {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #333; /* Dark gray footer */
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      font-size: 1rem;
-    }
-
-    footer a {
-      color: #ddd;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Mobile Responsive */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        padding: 1rem;
-      }
-
-      header h1 {
-        font-size: 2rem;
-      }
-
-      .resume-container {
-        padding: 1rem;
-      }
-
-      .pdf-viewer {
-        width: 100%;
-        height: 80vh;
-      }
-    }
-  </style>
 </head>
 <body>
 
