--- a/index.html
+++ b/index.html
@@ -2,37 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | Hunter Biersdorff</title>
-  <link rel="stylesheet" href="css/styles.css"> <!-- Linked external CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
-
   <header>
-    <h1>Hunter Biersdorff</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <main>
-    <div class="profile">
-      <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" />
+    <div class="hero">
+      <div class="photo-container">
+        <img src="Assets/profile.jpg" alt="Hunter Biersdorff" class="profile-photo" />
+      </div>
       <h1>Hunter Biersdorff</h1>
-      <p>Welcome to my personal portfolio! I’m a data center technician with a Bachelor’s in physics and a strong interest in transitioning into development or data analysis. While my formal experience is rooted in managing physical infrastructure and troubleshooting at the data center level, I’ve built a strong foundation in analytical thinking and technical systems. I’m now actively learning coding and data tools to bridge into software or analytics, and I’m excited to grow in a role where I can bring curiosity, discipline, and a fresh perspective to solving problems.</p>
-      <a href="resume.html" class="btn">View My Resume</a>
-      <a href="about.html" class="about-link">Learn more about me</a>
+      <p>A technical support engineer focused on clarity, curiosity, and communication.</p>
+      <div class="social-media">
+        <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
+          <img src="Assets/linkedin-icon.svg" alt="LinkedIn" />
+        </a>
+        <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
+          <img src="Assets/github-icon.svg" alt="GitHub" />
+        </a>
+        <a href="mailto:hunterbiersdorff@gmail.com" class="social-icon" target="_blank">
+          <img src="Assets/email-icon.svg" alt="Email" />
+        </a>
+      </div>
     </div>
-  </main>
+  </header>
 
   <footer>
     <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
   </footer>
-
 </body>
 </html>
