--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <header>
     <div class="hero">
       <div class="photo-container">
-        <img src="Assets/profile.jpg" alt="Hunter Biersdorff" class="profile-photo" />
+        <img src="Assets/Biersdorff.Hunter.pdf" alt="Hunter Biersdorff" class="profile-photo" />
       </div>
       <h1>Hunter Biersdorff</h1>
-      <p>A technical support engineer focused on clarity, curiosity, and communication.</p>
+      <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology.</p>
       <div class="social-media">
         <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
-          <img src="Assets/linkedin-icon.svg" alt="LinkedIn" />
+          <img src="Assets/linkedin_icon.svg.png" alt="LinkedIn" />
         </a>
         <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
           <img src="Assets/github-icon.svg" alt="GitHub" />
