--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
   <header>
     <div class="hero">
+      <!-- Profile photo container -->
       <div class="photo-container">
-        <img src="Assets/Biersdorff.Hunter.pdf" alt="Hunter Biersdorff" class="profile-photo" />
+        <img src="Assets/hunter_biersdorff_profile.jpg" alt="Hunter Biersdorff" class="profile-photo" />
       </div>
+      <!-- Name and bio section -->
       <h1>Hunter Biersdorff</h1>
       <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology.</p>
+
+      <!-- Social media links -->
       <div class="social-media">
         <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
           <img src="Assets/linkedin_icon.svg.png" alt="LinkedIn" />
