--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <p>Hi, I’m Hunter — a technical support engineer focused on clarity, curiosity, and communication. I thrive in fast-paced environments and enjoy breaking down complex problems into clear, actionable steps. I’m passionate about user experience, problem-solving, and working cross-functionally.</p>
+    <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology</p>
     <p>In my free time, I enjoy golfing, traveling, learning new technologies, and optimizing everyday systems to make life smoother and smarter.</p>
   </main>
 
