--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
       <!-- Profile photo container -->
       <div class="photo-container">
-        <img src="Assets/hunter_biersdorff_profile.jpg" alt="Hunter Biersdorff" class="profile-photo" />
+        <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" class="profile-photo" />
       </div>
       <!-- Name and bio section -->
       <h1>Hunter Biersdorff</h1>
@@ -20,7 +20,7 @@
       <!-- Social media links -->
       <div class="social-media">
         <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
-          <img src="Assets/linkedin_icon.svg.png" alt="LinkedIn" />
+          <img src="Assets/Linkedin_icon.svg.png" alt="LinkedIn" />
         </a>
         <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
           <img src="Assets/github-icon.svg" alt="GitHub" />
