--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img src="Assets/github-icon.svg" alt="GitHub" />
         </a>
         <a href="mailto:hunterbiersdorff@gmail.com" class="social-icon" target="_blank">
-          <img src="Assets/email-icon.svg" alt="Email" />
+          <img src="Assets/google-icon.svg" alt="Email" />
         </a>
       </div>
     </div>
