--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 </head>
 <body>
   <header>
+    <div class="header-content">
+      <h1>Hunter Biersdorff</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
     <div class="hero">
       <!-- Profile photo container -->
       <div class="photo-container">
         <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" class="profile-photo" />
       </div>
+
       <!-- Name and bio section -->
-      <h1>Hunter Biersdorff</h1>
       <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology.</p>
 
       <!-- Social media links -->
@@ -30,7 +43,7 @@
         </a>
       </div>
     </div>
-  </header>
+  </main>
 
   <footer>
     <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
