--- a/index.html
+++ b/index.html
@@ -9,42 +9,40 @@
 </head>
 <body>
   <header>
-    <div class="header-content">
+    <!-- Left Side (Site Name) -->
+    <div class="site-title">
       <h1>Hunter Biersdorff</h1>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-      </nav>
     </div>
+
+    <!-- Right Side (Navigation Links) -->
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
-  <main>
-    <div class="hero">
-      <!-- Profile photo container -->
-      <div class="photo-container">
-        <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" class="profile-photo" />
-      </div>
-
-      <!-- Name and bio section -->
-      <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology.</p>
-
-      <!-- Social media links -->
-      <div class="social-media">
-        <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
-          <img src="Assets/Linkedin_icon.svg.png" alt="LinkedIn" />
-        </a>
-        <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
-          <img src="Assets/github-icon.svg" alt="GitHub" />
-        </a>
-        <a href="mailto:hunterbiersdorff@gmail.com" class="social-icon" target="_blank">
-          <img src="Assets/google-icon.svg" alt="Email" />
-        </a>
-      </div>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="photo-container">
+      <img src="Assets/IMG_1805.JPEG" alt="Hunter Biersdorff" class="profile-photo" />
     </div>
-  </main>
+    <p>Hi, I'm Hunter — a Data Center Technician with a Bachelor's in Physics. I have a passion for problem-solving and thrive in fast-paced, technical environments. I'm experienced in troubleshooting and improving system efficiencies, always seeking opportunities to learn and grow in the field of technology.</p>
+
+    <div class="social-media">
+      <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
+        <img src="Assets/Linkedin_icon.svg.png" alt="LinkedIn" />
+      </a>
+      <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
+        <img src="Assets/github-icon.svg" alt="GitHub" />
+      </a>
+      <a href="mailto:hunterbiersdorff@gmail.com" class="social-icon" target="_blank">
+        <img src="Assets/google-icon.svg" alt="Email" />
+      </a>
+    </div>
+  </section>
 
   <footer>
     <p>© 2025 Hunter Biersdorff | <a href="mailto:hunterbiersdorff@gmail.com">Email me</a></p>
