--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,10 @@
     </nav>
   </header>
 
-  <main>
+  <main class="projects-main">
     <div class="card">
       <h2>Exoplanets</h2>
-      <p>A model of exoplanets that aims to find the semi major axis and astronomical unit for planets.</p>
+      <p>A model of exoplanets that aims to find the semi-major axis and astronomical unit for planets.</p>
       <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
     </div>
 
