--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Hunter Biersdorff</title>
   <link rel="stylesheet" href="CSS/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -13,22 +12,22 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
+      <a href="projects.html">Projects</a>
     </nav>
   </header>
 
-  <main>
-    <h2>Send me a Message</h2>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" name="name" required />
+  <main class="contact">
+    <h2>Get in Touch</h2>
+    <form action="submit_form.php" method="POST">
+      <label for="name">Your Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required />
 
-      <label for="email">Your Email</label>
-      <input type="email" id="email" name="email" required />
+      <label for="email">Your Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required />
 
-      <label for="message">Your Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      <label for="message">Your Message:</label>
+      <textarea id="message" name="message" placeholder="Type your message" rows="4" required></textarea>
 
       <button type="submit">Send Message</button>
     </form>
