--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Hunter Biersdorff</title>
   <link rel="stylesheet" href="CSS/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -18,41 +17,73 @@
     </nav>
   </header>
 
-  <main class="projects-main">
-    <div class="card">
-      <h2>Exoplanets</h2>
-      <p>A model of exoplanets that aims to find the semi-major axis and astronomical unit for planets.</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" target="_blank">View on GitHub</a>
+  <main class="projects">
+    <h2>My Projects</h2>
+
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Exoplanets Project" />
+      </div>
+      <div class="project-content">
+        <h3>Exoplanets</h3>
+        <p>A model of exoplanets that aims to find the semi major axis and astronomical unit for planets.</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Exoplanets" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
 
-    <div class="card">
-      <h2>Basic Graphing</h2>
-      <p>Learning to create graphical representations — the first step on my journey to displaying data visually.</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Basic Graphing" />
+      </div>
+      <div class="project-content">
+        <h3>Basic Graphing</h3>
+        <p>Learning to create graphical representations — the first step on my journey to displaying data visually.</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
 
-    <div class="card">
-      <h2>Legendre Polynomial with Graph</h2>
-      <p>A graphical representation of Legendre Polynomials — a system of complete and orthogonal polynomials with broad mathematical applications.</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Legendre%20Polynomials" target="_blank">View on GitHub</a>
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Legendre Polynomial with Graph" />
+      </div>
+      <div class="project-content">
+        <h3>Legendre Polynomial with Graph</h3>
+        <p>A graphical representation of Legendre Polynomials — a system of complete and orthogonal polynomials with broad mathematical applications.</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Legendre%20Polynomials" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
 
-    <div class="card">
-      <h2>Roll of the Die</h2>
-      <p>Python code to simulate rolling dice.</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Roll%20of%20the%20di" target="_blank">View on GitHub</a>
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Roll of the Die" />
+      </div>
+      <div class="project-content">
+        <h3>Roll of the Die</h3>
+        <p>Python code to simulate rolling dice.</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Roll%20of%20the%20di" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
 
-    <div class="card">
-      <h2>Placeholder</h2>
-      <p>Project description coming soon!</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Placeholder" />
+      </div>
+      <div class="project-content">
+        <h3>Placeholder</h3>
+        <p>Project description coming soon!</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
 
-    <div class="card">
-      <h2>Placeholder</h2>
-      <p>Project description coming soon!</p>
-      <a class="button" href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" target="_blank">View on GitHub</a>
+    <div class="project-card">
+      <div class="project-image">
+        <img src="https://via.placeholder.com/400x200" alt="Placeholder" />
+      </div>
+      <div class="project-content">
+        <h3>Placeholder</h3>
+        <p>Project description coming soon!</p>
+        <a href="https://github.com/Hunterb904/Computational-Physics/blob/main/Graph%20%231" class="btn" target="_blank">View on GitHub</a>
+      </div>
     </div>
   </main>
 
