--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="social-media">
       <a href="https://linkedin.com/in/hunterbiersdorff" class="social-icon" target="_blank">
-        <img src="Assets/Linkedin_icon.svg.png" alt="LinkedIn" />
+        <img src="Assets/LinkedIn_icon.svg.png" alt="LinkedIn" />
       </a>
       <a href="https://github.com/Hunterb904" class="social-icon" target="_blank">
         <img src="Assets/github-icon.svg" alt="GitHub" />
