--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
     <div class="project-card">
       <div class="project-image">
-        <img src="https://via.placeholder.com/400x200" alt="Basic Graphing" />
+        <img src="Planet_Nine_Orbit.svg.png" alt="Basic Graphing" />
       </div>
       <div class="project-content">
         <h3>Basic Graphing</h3>
@@ -55,7 +55,7 @@
 
     <div class="project-card">
       <div class="project-image">
-        <img src="https://via.placeholder.com/400x200" alt="Roll of the Die" />
+        <img src="Legendrepolynomials.svg" alt="Roll of the Die" />
       </div>
       <div class="project-content">
         <h3>Roll of the Die</h3>
@@ -66,7 +66,7 @@
 
     <div class="project-card">
       <div class="project-image">
-        <img src="https://via.placeholder.com/400x200" alt="Placeholder" />
+        <img src="Di-roll.svg" alt="Placeholder" />
       </div>
       <div class="project-content">
         <h3>Placeholder</h3>
